package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "io_port",
    srcs = [
        "io_port.cc",
    ],
    hdrs = [
        "io_port.h",
    ],
)

cc_library(
    name = "serial",
    srcs = [
        "serial.cc",
    ],
    hdrs = [
        "serial.h",
    ],
    deps = [
        ":io_port",
        "//kernel/arch:serial",
    ],
)
