package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

load("//kernel:templates.bzl", "kernel_library")

kernel_library(
    name = "linear",
    srcs = [
        "linear.cc",
    ],
    hdrs = [
        "linear.h",
        "//kernel/arch:memory.h",
    ],
    deps = [
        "//kernel/arch/i386/init:multiboot",
        "//util:list",
    ],
)
