package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "linear",
    srcs = [
        "linear.cc",
    ],
    hdrs = [
        "linear.h",
        "//kernel/arch:memory.h",
    ],
    deps = [
        "//kernel/arch/i386/boot:multiboot",
        "//util:list",
    ],
)
