package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "linear",
    srcs = [
        "linear.cc",
    ],
    hdrs = [
        "linear.h",
    ],
    deps = [
        "//kernel/arch/common:memory",
        "//kernel/arch/i386/boot:multiboot",
        "//util:list",
    ],
)
