load("//kernel:templates.bzl", "kernel_library")

package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

kernel_library(
    name = "serial",
    srcs = [
        "serial.cc",
    ],
    hdrs = [
        "serial.h",
    ],
    deps = [
        "//kernel/arch:serial",
        "//kernel/arch/i386/io_port",
    ],
)
