load("//kernel:templates.bzl", "kernel_library")

package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

kernel_library(
    name = "tty",
    srcs = [
        "tty.cc",
    ],
    hdrs = [
        "//kernel/arch:tty.h",
    ],
    new = False,
    tags = [
        "manual",
    ],
    visibility = ["//kernel/arch:__pkg__"],
    deps = [
        "//libc/string",
    ],
)
