load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/RyRose/smouth-os/tools/go/cmd/genh",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "genh",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
