load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["qemu.go"],
    importpath = "github.com/RyRose/smouth-os/tools/go/cmd/qemu",
    visibility = ["//visibility:private"],
    deps = ["//tools/go/qemu:go_default_library"],
)

go_binary(
    name = "qemu",
    args = [
        "--cpu=$(TARGET_CPU)",
        "--kernel=$(location //kernel)",
        "--output=monitor",
    ],
    data = [
        "//kernel",
    ],
    embed = [":go_default_library"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "serial",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    args = [
        "--cpu=$(TARGET_CPU)",
        "--kernel=$(location //kernel)",
        "--output=serial",
    ],
    data = [
        "//kernel",
    ],
    tags = ["manual"],
)

go_binary(
    name = "gdb",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    args = [
        "--cpu=$(TARGET_CPU)",
        "--kernel=$(location //kernel)",
        "--output=gdb",
        "--workspace_file=$(location //:workspace_name)",
    ],
    data = [
        "//kernel",
        "//:workspace_name",
    ],
    tags = ["manual"],
)
