load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//tools/builddefs:qemu_binaries.bzl", "qemu_binaries")

go_library(
    name = "go_default_library",
    srcs = ["qemu.go"],
    importpath = "github.com/RyRose/smouth-os/tools/go/cmd/qemu",
    visibility = ["//visibility:public"],
    deps = ["//tools/go/qemu:go_default_library"],
)

qemu_binaries(
    name = "",
    kernel = "//kernel",
)
